# rosdl_v4

./: .gitignore  LICENSE  README.md  bnkb.csv  dataset.csv  kkjjk.csv  lj.csv  merged_converted.docx  pyproject.toml  requirements.txt  sample.txt  tests.py
rosdl/: cli.py  data_generator.py  eda_drift_module.py  file_converter.py  image_tools.py  mat.py  metadata_extractor.py  ocr_module.py  pdf_tools.py  text_utils_module.py
rosdl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_synthetic_data.py  text_converter.py
